--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ cache:
   yarn: true
   directories:
   - tmp/cache/assets/test
+services:
+- redis-server
 before_install:
 - gem update --system
 - gem install bundler -v=1.16.2
