--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ cache:
   - tmp/cache/assets/test
 services:
 - redis-server
+- postgresql
 before_install:
 - gem update --system
 - gem install bundler -v=1.16.2
