--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,5 @@
+require: rubocop-rails
+
 AllCops:
   Exclude:
     - 'bin/*'
@@ -8,7 +10,7 @@ AllCops:
 Documentation:
   Enabled: false
 
-Lint/HandleExceptions:
+Lint/SuppressedException:
   Exclude:
     - Rakefile
 
@@ -17,9 +19,6 @@ Lint/AssignmentInCondition:
 
 Metrics/LineLength:
   Max: 120
-
-Rails:
-  Enabled: true
 
 Style/FrozenStringLiteralComment:
   Enabled: false
@@ -30,10 +29,6 @@ Metrics/MethodLength:
 
 Style/EmptyMethod:
   Enabled: false
-
-Style/BracesAroundHashParameters:
-  Exclude:
-    - 'spec/requests/*'
 
 Metrics/BlockLength:
   Exclude:
