--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ services:
 - postgresql
 before_install:
 - gem update --system
+- gem install bundler -v 2.4.19
 before_script:
 - yarn install
 - bundle exec rake db:create db:migrate RAILS_ENV=test
